syntax= "proto3";

option go_package= "github.com/flydevs/chat-app-api/users-api/src/clients/rpc";

service UsersProtoInterface{

    rpc GetUserByUuid(Uuid) returns (UserErrorResponse) {}

    rpc GetUserProfileByUuid(Uuid) returns (UserProfileErrorResponse) {}

    rpc DeleteUserByUuid(Uuid) returns (Error) {}

    rpc CreateUser(UserProfile) returns (UserProfileUuidResponse) {}

    rpc UpdateUser(UpdateUserRequest) returns (Error) {}

    rpc UpdateActive(UpdateActiveRequest) returns (Error) {}
}

message User{
    int64 id =1;
    Uuid uuid =2;
    int64 user_profile_id=3;
}


message UserProfile {
    bool active= 1;
    string phone = 2;
    string first_name= 3;
    string last_name= 4;
    string user_name= 5;
    string description= 6;
    string avatar_url= 7;
}

message Uuid {
    string uuid =1;
}

message Error{
    int32 status=1;
    string message=2;
}

message UserErrorResponse{
    User user =1;
    Error error =2;
}

message UserProfileErrorResponse{
    UserProfile user =1;
    Error error =2;
}

message UserProfileUuid{
    Uuid uuid =1;
    UserProfile user =2;
}

message UpdateUserRequest{
    UserProfileUuid content = 1;
    bool partial=2;
}

message UserProfileUuidResponse{
    UserProfileUuid content = 1;
    Error error =2;
}

message UpdateActiveRequest{
    Uuid uuid=1;
    bool active =2;
}

